# INF1007-grader-helper

./: .gitignore  README.md  constants.py  example.env  grade_files.py  inflate.sh  mail.py  main.py  merge_github_moodle.py  prepare_files.py  prepare_projects.py  pyproject.toml  students.py
