[tool.poetry]
name = "treat-students"
version = "0.1.0"
description = "Small script for post grading students in INF1007"
authors = ["fanevrk <faneva.rakotoarivony@polymtl.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
validate-email = "^1.3"
python-dotenv = "^1.0.1"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
